# talasound

./: .gitattributes  .gitignore  README.md  listenerUI.py  setup.py  simulator.py
animation/: animation.py  orders.csv
signal-processing/: beat.py  music.py  musicProcessing.py  test.py  test2.py
simulator/animation/: animation.py
simulator/client/: listenerUI.py
talasound-ui/: Bojour.qml  BojourForm.ui.qml  CMakeLists.txt  CmakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkpi.cpp  networkpi.h  playermodel.cpp  playermodel.h  playlistmusicmodel.cpp  playlistmusicmodel.h  talasound.pro  talasound.qss  talasoundres.qrc
